[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
description = "Sync GitHub followings to followers"
license = "Unlicense"
repository = "https://github.com/Resonaa/gfas"
homepage = "https://github.com/Resonaa/gfas"
keywords = ["github", "follow", "follower", "following", "sync"]
categories = ["command-line-utilities", "api-bindings"]
authors = ["Resonaa <resonaa@outlook.com>"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.24"
clap_mangen = "0.2.23"
clap-verbosity-flag = "2.2.1"
futures = "0.3.30"
octokit-rs = "0.1.15"
reqwest = { version = "0.12.7", features = [
    "json",
    "rustls-tls",
    "http2",
    "charset",
], default-features = false }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
trycmd = "0.15.7"
url = "2.5.2"

[workspace.metadata.release]
pre-release-commit-message = "chore: release"
tag-message = "chore: release"
tag-name = "v{{version}}"
verify = false

[profile.release]
opt-level = 3
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[workspace.package.metadata.deb]
section = "utils"
assets = [
    [
        "./target/release/gfas",
        "/usr/bin/",
        "755",
    ],
    [
        "./LICENSE",
        "/usr/share/doc/gfas/",
        "644",
    ],
    [
        "./README.md",
        "/usr/share/doc/gfas/README",
        "644",
    ],
    [
        "./deployment/deb/gfas.1",
        "/usr/share/man/man1/gfas.1",
        "644",
    ],
    [
        "deployment/deb/gfas.bash",
        "/usr/share/bash-completion/completions/gfas",
        "644",
    ],
    [
        "deployment/deb/gfas.fish",
        "/usr/share/fish/vendor_completions.d/gfas.fish",
        "644",
    ],
    [
        "deployment/deb/_gfas",
        "/usr/share/zsh/vendor-completions/",
        "644",
    ],
    [
        "deployment/deb/gfas.elv",
        "/usr/share/.elvish/completions/",
        "644",
    ],
]
