[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
description = "Sync GitHub followings to followers"
license = "Unlicense"
repository = "https://github.com/Resonaa/gfas"
homepage = "https://github.com/Resonaa/gfas"
keywords = ["github", "follow", "follower", "following", "sync"]
categories = ["command-line-utilities", "api-bindings"]
authors = ["Resonaa <resonaa@outlook.com>"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
clap-verbosity-flag = "3.0.4"
futures = "0.3.31"
octorust = "0.10.0"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
trycmd = "0.15.11"
log = "0.4.29"

[workspace.metadata.release]
pre-release-commit-message = "chore: release"
tag-message = "chore: release"
tag-name = "v{{version}}"
verify = false

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[workspace.package.metadata.deb]
section = "utils"
assets = [
    [
        "./target/release/gfas",
        "/usr/bin/",
        "755",
    ],
    [
        "./LICENSE",
        "/usr/share/doc/gfas/",
        "644",
    ],
    [
        "./README.md",
        "/usr/share/doc/gfas/README",
        "644",
    ],
    [
        "./target/out/gfas.1",
        "/usr/share/man/man1/",
        "644",
    ],
    [
        "./target/out/gfas.bash",
        "/usr/share/bash-completion/completions/gfas",
        "644",
    ],
    [
        "./target/out/gfas.fish",
        "/usr/share/fish/vendor_completions.d/",
        "644",
    ],
    [
        "./target/out/_gfas",
        "/usr/share/zsh/vendor-completions/",
        "644",
    ],
    [
        "./target/out/gfas.elv",
        "/usr/share/.elvish/completions/",
        "644",
    ],
]
