[package]
name = "gfas-api"
version = "0.5.0"
readme = "../../README.md"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures = { workspace = true }
octokit-rs = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
