[package]
name = "gfas-api"
version = "0.5.1"
readme = "../../README.md"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures = { workspace = true }
octocrab = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
