[package]
name = "gfas-api"
version = "0.8.58"
readme = "../../README.md"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
octorust.workspace = true
tracing.workspace = true
