[package]
name = "gfas-cli"
version = "0.1.0"
readme = "../../README.md"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bin]]
name = "gfas"
path = "src/main.rs"
doc = false

[dependencies]
gfas-api = { version = "0.1.0", path = "../gfas-api" }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
