[package]
name = "gfas-cli"
version = "0.8.64"
readme = "../../README.md"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "gfas"
path = "src/main.rs"
doc = false

[dependencies]
gfas-api = { version = "0.8.64", path = "../gfas-api" }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
clap-verbosity-flag.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
trycmd.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
clap-verbosity-flag.workspace = true
